# ray-jina

./: .gitignore  LICENSE  MANIFEST.in  README.md  benchmark.py  requirements.txt  setup.cfg  tox.ini
src/ray_jina/: __init__.py  executors.py  getway.py  pipeline.py  pod.py  utils.py
tests/: test_pipeline.py  test_pods.py  test_sample.py
