[metadata]
name = ray_jina
version = 0.0.0
license = MIT
description = A library for scaling and streamiling Jina executors
long_description = file: README.rst
author = Atem Aguer
author_email = atemjohn@stanford
keywods = distributed, streamline, scale, neural, search, ray, jina

[options]
packages = find:
package_dir = 
    =src
include_package_data = True

[options.packages.find]
where = src

