[metadata]
name = ray_jina
version = 0.0.1
license = MIT
description = A library for scaling and streamiling Jina executors using the ray distributed framework
long_description = file: README.rst
author = Atem Aguer
author_email = atemjohn@stanford.edu
keywods = distributed, streamline, scale, neural, search, ray, jina

[options]
packages = find:
package_dir = 
    =src
include_package_data = True

[options.packages.find]
where = src

